fixes: responsiveness | spacings | service section updated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,7 @@
   }
 
   .container {
-    @apply mx-auto px-12;
+    @apply mx-auto px-3 sm:px-4 md:px-6 lg:px-8 xl:px-12;
     max-width: 1440px;
   }
 
